--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Chek In Compose</string>
     <string name="onboarding_welcom">Welcome to lesson 3 sample</string>
     <string name="onboarding_go_next">Go next</string>
+    <string name="main_screen_hello">\"Hello, \"</string>
+    <string name="show_less">Show less</string>
+    <string name="show_more">Show more</string>
 </resources>
